--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
     "axios": "^1.6.7",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
+    "md5": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
+    "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.8",
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/md5": "^2.3.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
